welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:11: error: not found: value estSurJaune
}while (estSurJaune)
        ^